@@ -98,11 +98,12 @@ class Share(Singleton):
 		"""
 		Gets image as path string
 		"""
+		print os.path.join(self.__PathPixmap,name+".png")
 		if ((not isNull(file)) or (isStringEmpty(name))):
-			if (isFile(os.path.join(self.__PathPixmap, name, '.png'))):
-				return os.path.join(self.__PathPixmap, name, '.png')
-			elif (isFile(os.path.join(self.__PathPixmap, name, '.svg'))):
-				return os.path.join(self.__PathPixmap, name, '.svg')
+			if (isFile(os.path.join(self.__PathPixmap, name+'.png'))):
+				return os.path.join(self.__PathPixmap, name+'.png')
+			elif (isFile(os.path.join(self.__PathPixmap, name+ '.svg'))):
+				return os.path.join(self.__PathPixmap, name+'.svg')
 
 		return None
 
